<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/bin_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/bin_ssid_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/node_ota_bin_digits"
                android:hint="@string/node_ota_bin_ssid"
                android:maxLength="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/bin_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/node_ota_bin_digits"
                android:hint="@string/node_ota_bin_password"
                android:inputType="textPassword"
                android:maxLength="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/node_ota_bin_select"
            android:textColor="@color/colorAccent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bin_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/softap_connect_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/softap_message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/softap_continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/node_ota_softap_connect_continue"
            android:textAllCaps="false" />

    </LinearLayout>
</FrameLayout>