<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/filter_rssi_min_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provision_scan_filter_rssi_min" />

        <TextView
            android:id="@+id/filter_rssi_min_neg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/provision_scan_filter_rssi_negative" />

        <EditText
            android:id="@+id/filter_rssi_min_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/filter_rssi_max_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provision_scan_filter_rssi_max" />

        <TextView
            android:id="@+id/filter_rssi_max_neg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/provision_scan_filter_rssi_negative" />

        <EditText
            android:id="@+id/filter_rssi_max_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/filter_name_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provision_scan_filter_name" />

        <EditText
            android:id="@+id/filter_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/filter_uuid_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provision_scan_filter_uuid" />

        <EditText
            android:id="@+id/filter_uuid_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </LinearLayout>
</LinearLayout>