<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/node_info_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:columnCount="2"
    app:rowCount="3">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <TextView
            android:id="@+id/node_cid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/node_cid_label"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/node_cid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/node_cid_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <TextView
            android:id="@+id/node_pid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/node_pid_label"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/node_pid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/node_pid_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <TextView
            android:id="@+id/node_vid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/node_vid_label"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/node_vid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/node_vid_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <TextView
            android:id="@+id/node_crpl_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/node_crpl_label"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/node_crpl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/node_crpl_label" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1">

        <TextView
            android:id="@+id/node_features_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/node_features_label"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/node_features_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/node_features_label" />
    </RelativeLayout>

</androidx.gridlayout.widget.GridLayout>