<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/model_bind_app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_bind_app_key"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/model_operation_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/model_bind_app_btn">

        <TextView
            android:id="@+id/model_operation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_operation_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <Switch
                    android:id="@+id/model_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/model_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?android:selectableItemBackground"
                    android:padding="4dp"
                    android:visibility="gone" />

                <com.warkiz.widget.IndicatorStayLayout
                    android:id="@+id/model_seek_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <com.warkiz.widget.IndicatorSeekBar
                        android:id="@+id/model_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isb_max="100"
                        app:isb_show_indicator="rectangle" />
                </com.warkiz.widget.IndicatorStayLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/model_group_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/model_group_title"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/model_operation_form" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/model_bind_group_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_model_bind_group"
        app:layout_constraintTop_toBottomOf="@id/model_group_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/model_group_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/model_bind_group_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>